# gap-mm

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  execution_logic.md  mm_engine_fast.py  price_predictor.py  pyproject.toml  stats.py  test_execution_engine.py  test_feed.py  test_gap_predictor.py  test_live_trading.py
.github/workflows/: ci.yml
OrderBook-rs/: README.md
examples/: minimal_stream.py
rust_engine/: Cargo.toml  README.md
rust_engine/src/: bybit.rs  execution.rs  lib.rs  main.rs  private_ws.rs
src/gap_mm/: __init__.py  __main__.py  engine.py  live.py
tests/benchmarks/: bench_latency.py
tests/fixtures/: bybit_orderbook_snapshot.json
tests/integration/: test_gap_signal_pipeline.py  test_reconcile_mock.py
tests/unit/: test_calculate_quotes.py  test_encode_signal.py  test_pnl.py
