[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
orderbook-rs = "0.5.0"
anyhow = "1.0"
pyo3 = { version = "0.25", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "bybit_stream"
path = "src/main.rs"
